# MatrixClass

./: CMakeLists.txt
include/: ZMathHeader.h  z_func.h  z_vector.h
src/: z_func.cpp  z_vector.cpp
test/: test_zmath.cpp
